--- a/application/index/view/account/balance.html
+++ b/application/index/view/account/balance.html
@@ -1,7 +1,7 @@
 <header class="header" id="header">
 <a href="javascript:history.go(-1)" target=_self class="back">返回</a>
 <h1>我的账户</h1>
-<a href="account_details.html" style="padding-right: 20px;"><span>账户明细</span></a>
+<a href="account/billShow" style="padding-right: 20px;"><span>账户明细</span></a>
 </header>
 
 <div class="container" id="container">
@@ -13,8 +13,8 @@
 	        	<span >¥{$money}</span>
 	        </p>
 	    </div>
-		<a href="integral/recharge" class="submit-btn">充值</a>
-		<a href="integral/forward" class="submit-btn">提现</a>
+		<a href="account/recharge" class="submit-btn">充值</a>
+		<a href="account/forward" class="submit-btn">提现</a>
 	</center>
     
 </div>
