--- a/application/index/view/account/forward.html
+++ b/application/index/view/account/forward.html
@@ -1,10 +1,10 @@
 <header class="header" id="header">
 <a href="javascript:history.go(-1)" target=_self class="back">返回</a>
-<h1>账户充值</h1>
-<a href="account_details.html" style="padding-right: 20px;"><span>账户明细</span></a>
+<h1>账户提现</h1>
+<a href="account/billShow" style="padding-right: 20px;"><span>账户明细</span></a>
 </header>
 <div class="container" id="container">
-	<form action="integral/recharge" method="post">
+	<form action="account/forward" method="post">
 		<div class="registered">
 			<div class="field">
 				<span style="font-size: 30px;">银行卡号</span>
@@ -21,7 +21,7 @@
 			</div>
 	       	<div class="field">
 	       		<span style="font-size: 30px;">金额(¥)</span>
-	        	<input type="text" name="money" placeholder="请填写充值金额" value="" style="font-size: 15px;">
+	        	<input type="text" name="money" placeholder="请填写提现金额" value="" style="font-size: 15px;">
 	       	</div>
 	        
 	    </div>
