--- a/application/index/view/users/index.html
+++ b/application/index/view/users/index.html
@@ -20,7 +20,7 @@
      </ul>
       <ul>
       	<li><a class="my-icon-kfzx" href="{:url('build/mypile')}">我的电桩</a></li>
-       <li><a class="my-icon-yhq" href="integral/balance">我的账户</a></li>
+       <li><a class="my-icon-yhq" href="account/balance">我的账户</a></li>
        <li><a class="my-icon-wdjf" href="integral/index">我的积分</a></li>
         <li><a class="my-icon-gsjj" href="users/loginout">退出登录</a></li>
      	</ul>
