--- a/application/index/view/users/userMsg.html
+++ b/application/index/view/users/userMsg.html
@@ -41,6 +41,7 @@
   </li>
   <li><a href="users/upPwd"><span>修改密码</span><em>******</em></a></li>
   <li><a href="users/payPwd"><span>支付密码</span><em>******</em></a></li>
+  <li><a href="account/cardAdd"><span>绑定银行卡</span></a></li>
 </ul>
 </div>
 
