--- a/application/demo/view/pile/show.html
+++ b/application/demo/view/pile/show.html
@@ -32,7 +32,7 @@
                         	<td>{$v.a_num}</td>
                         	<td>
                                 {if ($v.p_status==0)}
-                                    <a href="{:url('pile/upl')}?p_id={$v.p_id}">损坏</a>
+                                    <a href="{:url('pile/upl')}?p_id={$v.p_id}">维修</a>
                                 {/if}   
                             </td>
                         </tr>
