--- a/application/index/view/order/order.html
+++ b/application/index/view/order/order.html
@@ -142,7 +142,7 @@
           </div>
           <div class="my-order-item-btn">
             <div class="pos-r">
-              <span class="my-order-item-jindu"><a href="order-schedule1.html">查看进度</a></span>
+              <span class="my-order-item-jindu"><a href="{:url('index/now/charging')}?pay_time={$arr.pay_time}&money={$arr.money}&pur={$arr.pur}&time={$arr.time}&pid={$arr.pid}&cid={$arr.cid}">查看进度</a></span>
             </div>  
           </div>
         </div>
