--- a/application/demo/view/index/coordinate.html
+++ b/application/demo/view/index/coordinate.html
@@ -10,7 +10,7 @@
 	<title>添加动画标注点</title>
 </head>
 <body>
-	<a href="{:url('index/examine')}">返回</a>
+	<a href="javascript:history.go(-1)">返回</a>
 	<div id="allmap"></div>
 </body>
 </html>
