--- a/application/index/view/order/order.html
+++ b/application/index/view/order/order.html
@@ -359,7 +359,7 @@ tabs.set("nav","menu_con");//执行
 									window.location.reload();
               	}else if(msg=='5'){
               		alert('请先充值！余额不够支付');
-              		location.href="{:url('index/integral/recharge')}"
+              		location.href="{:url('index/account/recharge')}"
               	}
                 console.log("success");
               })
