--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -1,10 +1,56 @@
 ﻿
+
+
 <base href="__ROOT__/index/" />
+<link href="qq/css/lanrenzhijia.css" rel="stylesheet" type="text/css" />
 <!--header-end-->
 <header class="header" id="header">
 <a href="javascript:history.go(-1)" target=_self class="back">充电桩</a>
 
 </header>
+<!-- 代码部分 begin -->
+<div class="main-im">
+	<div id="open_im" class="open-im">&nbsp;</div>  
+	<div class="im_main" id="im_main">
+		<div id="close_im" class="close-im"><a href="javascript:void(0);" title="点击关闭">&nbsp;</a></div>
+		<a href="http://wpa.qq.com/msgrd?v=3&uin=2565465762&site=qq&menu=yes" target="_blank" class="im-qq qq-a" title="在线QQ客服">
+			<div class="qq-container"></div>
+			<div class="qq-hover-c"><img class="img-qq" src="http://demo.lanrenzhijia.com/2015/service0119/images/qq.png"></div>
+			<span> QQ在线咨询</span>
+		</a>
+		
+		
+	</div>
+</div>
+<script src="http://www.lanrenzhijia.com/ajaxjs/jquery.min.js"></script>
+<script>
+$(function(){
+	$('#close_im').bind('click',function(){
+		$('#main-im').css("height","0");
+		$('#im_main').hide();
+		$('#open_im').show();
+	});
+	$('#open_im').bind('click',function(e){
+		$('#main-im').css("height","272");
+		$('#im_main').show();
+		$(this).hide();
+	});
+	$('.go-top').bind('click',function(){
+		$(window).scrollTop(0);
+	});
+	$(".weixing-container").bind('mouseenter',function(){
+		$('.weixing-show').show();
+	})
+	$(".weixing-container").bind('mouseleave',function(){        
+		$('.weixing-show').hide();
+	});
+});
+</script>
+<!-- 代码部分 end-->
+
+
+
+
 
 <!--container-end-->
                     <style type="text/css">
