--- a/application/index/view/comment/index.html
+++ b/application/index/view/comment/index.html
@@ -6,7 +6,7 @@
 <meta content="yes" name="apple-mobile-web-app-capable" />
 <meta content="black" name="apple-mobile-web-app-status-bar-style" />
 <meta content="telephone=no" name="format-detection" />
-<title>预约回收</title>
+<title>评价</title>
 <link rel="stylesheet" type="text/css" href="css/base.css">
 <link rel="stylesheet" type="text/css" href="css/common.css">
 <script type="text/javascript" src="js/jquery.min.js" ></script>
@@ -16,7 +16,7 @@
 <body>
 <header class="header" id="header">
 <a href="javascript:history.go(-1)" target=_self class="back">返回</a>
-<h1>预约回收</h1>
+<h1>欢迎评价</h1>
 </header>
 <!--header-end-->
 
@@ -31,7 +31,7 @@
            <span id="selectedimg"></span>         
         </div>
         <input type="hidden" name="o_id" value="{$o_id}"/>
-        <button type="submit" class="confirm-payment">点击评估</button>
+        <button type="submit" class="confirm-payment">点击评价</button>
     </div>
   </form>  
 </div>
