--- a/application/index/view/order/order.html
+++ b/application/index/view/order/order.html
@@ -209,7 +209,7 @@
         </div>
         <div class="numb_box">
             <div class="xiaq_tb">
-                <img src="images/jftc_14.jpg" height="10"></div>
+               </div>
             <ul class="nub_ggg">
                 <li><a href="javascript:void(0);" class="zf_num">1</a></li>
                 <li><a href="javascript:void(0);" class="zj_x zf_num">2</a></li>
