--- a/application/index/view/users/my_nick.html
+++ b/application/index/view/users/my_nick.html
@@ -15,7 +15,7 @@
 
 <body>
 
-<form action="users/myNick" method="post">
+<form action="{:url('users/myNick')}" method="post">
 <header class="header header-save" id="header">
 <a href="javascript:history.go(-1)" target=_self class="back">返回</a>
 <h1>我的姓名</h1>
