--- a/application/index/view/account/card_add.html
+++ b/application/index/view/account/card_add.html
@@ -1,4 +1,4 @@
-<form action="account/cardAdd" method="post">
+<form action="{:url('account/cardAdd')}" method="post">
 <header class="header header-save" id="header">
 <a href="javascript:history.go(-1)" target=_self class="back">返回</a>
 <h1>绑定银行卡</h1>
