--- a/application/index/view/layout/footer.html
+++ b/application/index/view/layout/footer.html
@@ -14,18 +14,18 @@
       {switch name=$action}
 
           {case  value="index" }
-      <li class="on" ><a href="index.html" class="home"><i></i><span class="full-block">首页</span></a></li>
+      <li class="on" ><a href="{:url('index/index')}" class="home"><i></i><span class="full-block">首页</span></a></li>
       <li ><a href="{:url('index/chat')}" class="hz" ><i></i><span class="full-block">互助</span></a></li>
       <li><a href="{:url('build/index')}" class="foot-worker"><i></i><span class="full-block">申请建桩</span></a></li>
       <li ><a href="{:url('index/order/order')}" class="foot-order"><i></i><span class="full-block">订单</span></a></li>
-      <li><a href="users/index" class="my"><i></i><span class="full-block">我的</span></a></li>
+      <li><a href="{:url('users/index')}" class="my"><i></i><span class="full-block">我的</span></a></li>
           {/case}
           {case value="chat" }
-            <li ><a href="index.html" class="home"><i></i><span class="full-block">首页</span></a></li>
+            <li ><a href="{:url('index/index')}" class="home"><i></i><span class="full-block">首页</span></a></li>
             <li class="on" ><a href="{:url('index/chat')}" class="hz" ><i></i><span class="full-block">互助</span></a></li>
             <li><a href="{:url('build/index')}" class="foot-worker"><i></i><span class="full-block">申请建桩</span></a></li>
             <li ><a href="{:url('index/order/order')}" class="foot-order"><i></i><span class="full-block">订单</span></a></li>
-            <li><a href="users/index" class="my"><i></i><span class="full-block">我的</span></a></li>
+            <li><a href="{:url('users/index')}" class="my"><i></i><span class="full-block">我的</span></a></li>
           {/case}
       {/switch} 
     {/case}
@@ -33,25 +33,25 @@
      
 
     {case value="Build"}
-    	<li><a href="index.html" class="home"><i></i><span class="full-block">首页</span></a></li>
+    	<li><a href="{:url('index/index')}" class="home"><i></i><span class="full-block">首页</span></a></li>
       <li><a href="{:url('index/chat')}" class="hz" ><i></i><span class="full-block">互助</span></a></li>
 	    <li class="on"><a href="{:url('build/index')}" class="foot-worker"><i></i><span class="full-block">申请建桩</span></a></li>
 	    <li><a href="{:url('index/order/order')}" class="foot-order"><i></i><span class="full-block">订单</span></a></li>
-	    <li><a href="users/index" class="my"><i></i><span class="full-block">我的</span></a></li>
+	    <li><a href="{:url('users/index')}" class="my"><i></i><span class="full-block">我的</span></a></li>
     {/case}
     {case value="Users"}
-    	<li><a href="index.html" class="home"><i></i><span class="full-block">首页</span></a></li>
+    	<li><a href="{:url('index/index')}" class="home"><i></i><span class="full-block">首页</span></a></li>
       <li><a href="{:url('index/chat')}" class="hz" ><i></i><span class="full-block">互助</span></a></li>
 	    <li><a href="{:url('build/index')}" class="foot-worker"><i></i><span class="full-block">申请建桩</span></a></li>
 	    <li><a href="{:url('index/order/order')}" class="foot-order"><i></i><span class="full-block">订单</span></a></li>
-	    <li class="on"><a href="users/index" class="my"><i></i><span class="full-block">我的</span></a></li>
+	    <li class="on"><a href="{:url('users/index')}" class="my"><i></i><span class="full-block">我的</span></a></li>
     {/case}
     {case value="Order"}
-    	<li><a href="index.html" class="home"><i></i><span class="full-block">首页</span></a></li>
+    	<li><a href="{:url('index/index')}" class="home"><i></i><span class="full-block">首页</span></a></li>
       <li><a href="{:url('index/chat')}" class="hz" ><i></i><span class="full-block">互助</span></a></li>
 	    <li><a href="{:url('build/index')}" class="foot-worker"><i></i><span class="full-block">申请建桩</span></a></li>
 	    <li class="on"><a href="{:url('index/order/order')}" class="foot-order"><i></i><span class="full-block">订单</span></a></li>
-	    <li><a href="users/index" class="my"><i></i><span class="full-block">我的</span></a></li>
+	    <li><a href="{:url('users/index')}" class="my"><i></i><span class="full-block">我的</span></a></li>
     {/case}
 {/switch}
 
