--- a/application/index/view/users/up_pwd.html
+++ b/application/index/view/users/up_pwd.html
@@ -15,7 +15,7 @@
 
 <body>
 
-<form action="users/upPwd" method="post">
+<form action="{:url('users/upPwd')}" method="post">
 <header class="header header-save" id="header">
 <a href="javascript:history.go(-1)" target=_self class="back">返回</a>
 <h1>修改密码</h1>
